try to fix the background for make it visible on the github deployment

--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body{
     height: 100vh; 
     width: 100vw; /* si j'utilise pas la même valeur pour width et height ça va créer une ellipse visuelle quuan dearth tourne autour de sun, car hauteur et largeur ne seront pas réciproques*/
-    background-image: url('/img/pexels-felix-mittermeier-956999.jpg');
+    background-image: url('img/pexels-felix-mittermeier-956999.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
-   
+    display: flex;
     justify-content: center;
     overflow: hidden;
 }
